--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3.5'
 services:
   my-trace-table:
     container_name: container-my-trace-table
-    image: ronyabreu/my-trace-table:latest
+    build: 
+      context: .
     restart: always
     ports:
       - "9999:80"
