--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.5'
 services:
   my-trace-table:
     container_name: container-my-trace-table
-    build: 
+    build:
       context: .
     restart: always
     ports:
@@ -13,39 +13,11 @@ services:
     volumes:
       - shared-assets:/usr/share/nginx/html/assets
 
-  db:
-    container_name: container-database
-    image: postgres:16
-    restart: always
-    env_file:
-      - dev.env
-    ports:
-      - "5432:5432"
-    volumes:
-      - db_data:/app/data
-    networks:
-      - trace-network
-
-  trace-api:
-    container_name: container-api
-    depends_on:
-      - db
-    restart: always
-    image: ronyabreu/my-trace-table-manager-api:latest
-    env_file:
-      - dev.env
-    ports:
-      - "8080:8080"
-    networks:
-      - trace-network
-    volumes:
-      - shared-assets:/app/assets
-
 volumes:
-  db_data: {}
   shared-assets: {}
 
 networks:
   trace-network:
     name: trace-network
     driver: bridge
+    external: true
