--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - trace-network
     volumes:
       - shared-assets:/usr/share/nginx/html/assets
+    env_file:
+      - .env
 
 volumes:
   shared-assets: {}
