--- a/nginx.conf
+++ b/nginx.conf
@@ -20,12 +20,12 @@ http {
       try_files $uri /index.html;   
     }
 
-    location /api/ {
-      proxy_pass http://trace-api:8080/v1/;
-      proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-    }
+#    location /api/ {
+#      proxy_pass http://trace-api:8080/v1/;
+#      proxy_http_version 1.1;
+#      proxy_set_header Host $host;
+#      proxy_set_header X-Real-IP $remote_addr;
+#    }
 
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
